--- a/PR016-ExpandableListView/app/src/main/res/values/strings.xml
+++ b/PR016-ExpandableListView/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="student">Student</string>
     <string name="grade">Grade</string>
     <string name="activity_main_expand">Expandir / Contraer grupo</string>
-    <string name="main_activity_student_info">%1$s (%2$s del %3$s)"</string>
+    <string name="main_activity_student_info">%1$s"</string>
 </resources>
