--- a/PR011-ListViewSimple/app/src/main/res/values/strings.xml
+++ b/PR011-ListViewSimple/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Students</string>
-
-    <string name="main_activity_txtName">Name</string>
-
-    <string name="activity_main_btnAdd">Add</string>
-    <string name="activity_main_lblEmptyView">No students yet</string>
+    <string name="main_txtName">Name</string>
+    <string name="main_btnAdd">Add</string>
+    <string name="main_lblEmptyView">No students yet</string>
+    <string name="main_error_deleting_student">Error deleting student</string>
+    <string name="main_error_inserting_student">Error inserting student</string>
 </resources>
