--- a/PR106-RecyclerView/app/src/main/res/values/strings.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">RecyclerView</string>
-    <string name="activity_main_lblEmpty">No students</string>
-    <string name="activity_main_item_imgAvatar">Avatar</string>
-    <string name="main_activity_click_on_student">Clicked on %1$s</string>
 
+    <string name="main_lblEmpty">No students yet</string>
+    <string name="main_click_on_student">Clicked on %1$s</string>
+
+    <string name="main_item_imgAvatar">Avatar</string>
 </resources>
