--- a/PR226-ItemTouchHelper/app/src/main/res/values/strings.xml
+++ b/PR226-ItemTouchHelper/app/src/main/res/values/strings.xml
@@ -2,8 +2,13 @@
 <resources>
 
     <string name="app_name">ItemTouchHelper</string>
+
     <string name="main_lblEmpty">No students</string>
-    <string name="main_item_imgAvatar">Avatar</string>
     <string name="main_click_on_student">Clicked on %1$s</string>
+    <string name="main_mnuSort">Sort</string>
+    <string name="main_mnuSaveOrder">Save</string>
+
+    <string name="main_item_imgAvatar">Avatar</string>
+    <string name="main_item_imgDrag">Drag</string>
 
 </resources>
