--- a/PR249-SingleActivityMasterDetail/app/src/main/res/values/strings.xml
+++ b/PR249-SingleActivityMasterDetail/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Fragments</string>
-    <string name="activity_main_lblEmpty">No students</string>
+
+    <string name="list_lblEmptyView">No students</string>
     <string name="list_title">Student list</string>
+
     <string name="detail_title">Student detail</string>
 </resources>
