--- a/PR104-Toolbar/app/src/main/res/values/strings.xml
+++ b/PR104-Toolbar/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Toolbar</string>
-    <string name="activity_main_mnuSettings">Settings</string>
-    <string name="activity_main_mnuNext">Next</string>
-    <string name="activity_main_lblTitle">Main activity</string>
-    <string name="activity_secundary_lblTitle">Secundary actividad</string>
+
+    <string name="main_mnuSettings">Settings</string>
+    <string name="main_mnuNext">Next</string>
+    <string name="main_lblTitle">Main activity</string>
     <string name="main_settings">Settings</string>
 
+    <string name="secondary_lblTitle">Secundary actividad</string>
 </resources>
