--- a/PR248-ToolbarNotAsActionBar/app/src/main/res/values/strings.xml
+++ b/PR248-ToolbarNotAsActionBar/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Toolbar</string>
+
     <string name="main_mnuSettings">Settings</string>
     <string name="main_mnuNext">Next</string>
     <string name="main_settings">Settings</string>
     <string name="main_lblTitle">Main activity</string>
-    <string name="secundary_title">Secundary activity</string>
-    <string name="secundary_lblTitle">Secundary actividad</string>
 
+    <string name="secondary_title">Secondary activity</string>
+    <string name="secondary_lblTitle">Secondary actividad</string>
 </resources>
