--- a/PR251-SQLite/app/src/main/res/values/strings.xml
+++ b/PR251-SQLite/app/src/main/res/values/strings.xml
@@ -3,16 +3,16 @@
 
     <string name="app_name">SQLite</string>
 
-    <string name="fragment_main_lblEmptyView">No students</string>
-    <string name="fragment_main_item_imgAvatar">avatar</string>
+    <string name="list_lblEmptyView">No students</string>
+    <string name="list_item_imgAvatar">avatar</string>
 
-    <string name="fragment_student_txtName">Name</string>
-    <string name="fragment_student_imgGrade">Grade</string>
-    <string name="fragment_student_imgPhone">Phone</string>
-    <string name="fragment_student_imgAddress">Address</string>
+    <string name="student_txtName">Name</string>
+    <string name="student_imgGrade">Grade</string>
+    <string name="student_imgPhone">Phone</string>
+    <string name="student_imgAddress">Address</string>
 
-    <string name="student_fragment_edit_student">Update student</string>
-    <string name="student_fragment_add_student">Add student</string>
-    <string name="student_fragment_required_field">Required field</string>
+    <string name="student_edit_student">Update student</string>
+    <string name="student_add_student">Add student</string>
+    <string name="student_required_field">Required field</string>
 
 </resources>
