--- a/PR083-VolleyJSON/app/src/main/res/values/strings.xml
+++ b/PR083-VolleyJSON/app/src/main/res/values/strings.xml
@@ -2,13 +2,13 @@
 <resources>
 
     <string name="app_name">VolleyJSON</string>
-    <string name="activity_main_lblEmptyView">No students</string>
-    <string name="activity_main_item_imgPhoto">Photo</string>
-    <string name="activity_main_item_btnMarks">Marks</string>
-    <string name="activity_main_item_btnCall">Call</string>
-    <string name="activity_main_item_lblRepeater">REP</string>
+    <string name="main_lblEmptyView">No students</string>
+    <string name="main_item_imgPhoto">Photo</string>
+    <string name="main_item_btnMarks">Marks</string>
+    <string name="main_item_btnCall">Call</string>
+    <string name="main_item_lblRepeater">REP</string>
     <string name="main_refresh">Refresh</string>
-    <plurals name="main_activity_adapter_years">
+    <plurals name="main_item_years">
         <item quantity="one">%1$d year old</item>
         <item quantity="other">%1$d years old</item>
     </plurals>
