--- a/PR195-RetrofitRxJava/app/src/main/res/values-es/strings.xml
+++ b/PR195-RetrofitRxJava/app/src/main/res/values-es/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">RetrofitRxJava</string>
-    <string name="activity_main_lblEmptyView">No hay alumnos</string>
-    <string name="activity_main_item_imgPhoto">Foto</string>
-    <string name="activity_main_item_btnMarks">Notas</string>
-    <string name="activity_main_item_btnCall">Llamar</string>
-    <string name="activity_main_item_lblRepeater">REP</string>
+    <string name="main_lblEmptyView">No hay alumnos</string>
+    <string name="main_item_imgPhoto">Foto</string>
+    <string name="main_item_btnMarks">Notas</string>
+    <string name="main_item_btnCall">Llamar</string>
+    <string name="main_item_lblRepeater">REP</string>
     <string name="main_refresh">Recargar</string>
-    <plurals name="main_activity_adapter_years">
+    <plurals name="main_item_years">
         <item quantity="one">%1$d año</item>
         <item quantity="other">%1$d años</item>
     </plurals>
