--- a/PR241-JobIntentService/app/src/main/res/values/strings.xml
+++ b/PR241-JobIntentService/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="main_lblEmptyView">No students yet</string>
     <string name="main_exported">List exported to file</string>
     <string name="main_open">Open</string>
+    <string name="main_no_app_to_show_file">No app can show the file content</string>
 
 </resources>
