--- a/PR242-ForegroundService/app/src/main/res/values/strings.xml
+++ b/PR242-ForegroundService/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="main_lblEmptyView">No students yet</string>
     <string name="main_exported">List exported to file</string>
     <string name="main_open">Open</string>
+    <string name="main_no_app_to_show_file">No app can show the file content</string>
     <string name="export_service_exporting">Exporting student list</string>
     <string name="export_service_progress">%1$d of %2$d</string>
     <string name="export_service_file_created">Student list exported to file</string>
