--- a/PR104-Toolbar/app/src/main/res/values/strings.xml
+++ b/PR104-Toolbar/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="main_mnuSettings">Settings</string>
     <string name="main_mnuNext">Next</string>
     <string name="main_lblTitle">Main activity</string>
-    <string name="main_settings">Settings</string>
 
     <string name="secondary_lblTitle">Secundary actividad</string>
+    <string name="settings_lblSettings">Settings</string>
 </resources>
