--- a/PR005-IntentsExplicitos/app/src/main/res/values-es/strings.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/values-es/strings.xml
@@ -2,15 +2,16 @@
 <resources>
     <string name="app_name">Intents Explícitos</string>
 
-    <string name="activity_main_lblTitle">Datos del alumno</string>
-    <string name="activity_main_lblData">(no disponibles)</string>
-    <string name="activity_main_btnRequest">Solicitar</string>
+    <string name="main_lblTitle">Datos del alumno</string>
+    <string name="main_lblData">(no disponibles)</string>
+    <string name="main_btnRequest">Solicitar</string>
+    <string name="main_student_data">Nombre: %1$s\nEdad: %2$d</string>
+    <string name="main_invalid_name">Introduzca el nombre</string>
+    <string name="main_invalid_age">Edad no válida</string>
 
-    <string name="activity_student_lblName">Nombre</string>
-    <string name="activity_student_lblAge">Edad</string>
-    <string name="activity_student_btnSend">Aceptar</string>
-    <string name="activity_student_txtName">(nombre completo)</string>
-    <string name="activity_student_txtAge">(edad)</string>
-
-    <string name="main_activity_student_data">Nombre: %1$s\nEdad: %2$d</string>
+    <string name="student_lblName">Nombre</string>
+    <string name="student_lblAge">Edad</string>
+    <string name="student_btnSend">Aceptar</string>
+    <string name="student_txtName">(nombre completo)</string>
+    <string name="student_txtAge">(edad)</string>
 </resources>
