--- a/PR156-Parcelable/app/src/main/res/values/strings.xml
+++ b/PR156-Parcelable/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="activity_student_txtAge">(age)</string>
 
     <string name="main_activity_student_data">Name: %1$s\nAge: %2$d</string>
+    <string name="main_invalid_name">Enter a name</string>
+    <string name="main_invalid_age">Invalid age</string>
 
 </resources>
